website/versioned_docs/version-0.3.1-beta/development/headless-styles/Avatar.mdx
---
tags: [Development, Packages, Components, Headless Styles, Avatar]
---

<!-- TODO: As of 2.0.0-beta.17 live-codeblock do not support imports. -->
<!-- Keep an eye out so we can kill the components we are importing in. -->
<!-- https://docusaurus.io/docs/markdown-features/code-blocks#imports -->

import CodeBlock from '@theme/CodeBlock'
import BasicAvatar from '@site/src/components/Avatar/BasicAvatar'
import {
  BasicAvatarPreview,
  BasicAvatarFullPreview,
} from '@site/src/components/Avatar/BasicAvatar.preview'
import AvatarSizes from '@site/src/components/Avatar/AvatarSizes'
import {
  AvatarSizesPreview,
  AvatarSizesFullPreview,
} from '@site/src/components/Avatar/AvatarSizes.preview'
import ViewSourceLink from '@site/src/components/ViewSourceLink/ViewSourceLink'
import LiveExampleTabs from '@site/src/components/LiveExampleTabs/LiveExampleTabs'

The Avatar is used to represent a user and is designed to display
a profile image, initials, or fallback icon.

<ViewSourceLink
  icon="github"
  href="https://github.com/pluralsight/pando/tree/main/packages/headless-styles/src/components/Avatar"
>
  View source
</ViewSourceLink>

## Import

```javascript
import { getAvatarProps } from '@pluralsight/headless-styles'
```

## Usage

### Avatar Kinds (fallback only)

The `getAvatarProps` helper has two kinds to change the visual color of the avatar fallback that directly correlate to our [design-tokens](../tokens/intro.md#naming-convention). You can use `default` and `action`.

:::note

When using Avatars, make sure there is a purpose behind the fallback colors you are choosing. [Follow our guide](#avatar-content) to learn how to display avatars for the best user experience.

:::

<BasicAvatar />
<LiveExampleTabs
  fullCode={<BasicAvatarFullPreview />}
  sandboxList={{
    chakra: 'basic-avatar-react-chakra-tvxvqs',
    joy: 'basic-avatar-mui-uv5bks',
    styled: 'basic-avatar-css-in-js-sc-jb5imx',
    svelte: 'basic-avatar-svelte-t60wvw',
  }}
>
  <BasicAvatarPreview />
</LiveExampleTabs>

### Avatar Sizes

To change the size of an Avatar, use the `size` option.
The options are: `xs`, `s`, `m` (default), `l`, and `xl`.

<AvatarSizes />
<LiveExampleTabs
  fullCode={<AvatarSizesFullPreview />}
  sandboxList={{
    chakra: 'basic-avatar-react-chakra-tvxvqs',
    joy: 'basic-avatar-mui-uv5bks',
    styled: 'basic-avatar-css-in-js-sc-jb5imx',
    svelte: 'basic-avatar-svelte-t60wvw',
  }}
>
  <AvatarSizesPreview />
</LiveExampleTabs>

:::tip

We use the standard clothing size shorthand values for all `size` related options in any library we provide (i.e. xs-xxl).

:::

### Avatar Content

The DS Avatars have three different states to display to the user. Each state has a different purpose for usage and should follow the guides below.

#### Image (preferred)

A profile image should be used for all Avatars no matter the context (i.e. person, platform, etc.). This will give the best visual experience for the user and should be used over all other options.

```jsx
const avatarProps = getAvatarProps({
  label: 'Harry Potter',
  src: 'http://harrypotter.com/avatar'
})

<span {...avatarProps.wrapper}>
  <img {...avatarProps.image} />
</span>
```

#### Initials (fallback)

In the absence of an image, the avatar's initials (up to 2 characters) should be displayed. **This is not ideal** but allows the user to still quickly put the dots together of who the avatar is meant to represent.

```jsx
const avatarProps = getAvatarProps({
  label: 'Harry Potter',
  src: ''
})

<span {...avatarProps.wrapper}>
  <div {...avatarProps.label}>{avatarProps.label.value}</div>
</span>
```

#### Icon (last resort)

If neither the image nor initials are available, display an icon
using the `iconOptions` from the [AvatarProps](#avatar-props) Object to represent a person.

:::danger

Although this option exists, **it is not recommended to be used** as it provides a vague user experience. If you have to use this option, you need to update your API to require a name for each user.

:::

```jsx
const avatarProps = getAvatarProps({
  label: '',
  src: ''
})

<span {...avatarProps.wrapper}>
  <PersonIcon {...getIconProps(avatarProps.iconOptions)} />
</span>
```

## PreloadImage Hook

For the best user-experience overall, combine this helper with our [Preloaded Image Hook](../react-utils/use-preloaded-img.mdx), React `Suspense` component, and the [Skeleton API](./Skeleton.mdx).

You can even add a custom `ErrorBoundary` that will display the initials or icon avatar if the links crash. Using this approach will provide the best user experience while allowing React to manage the image state. :zap:

[VIEW LIVE EXAMPLE](https://codesandbox.io/s/ps-react-forked-5429oc?file=/src/App.js) :eyes:

```jsx
function Fallback() {
  return <div {...getSkeletonProps({ kind: 'circle' })} />
}

function Image(props) {
  const { imgData, ...avatarProps } = props
  const avatarProps = getAvatarProps(avatarProps)
  const img = imgData.read()

  return (
    <span {...avatarProps.wrapper}>
      <img {...avatarProps.image} {...img} />
    </span>
  )
}

function Avatar() {
  const resource = usePreloadedImg({
    alt: 'random image',
    src: 'https://source.unsplash.com/random/?face&fit=facearea&facepad=2&w=256&h=256&q=80',
  })

  return (
    <AvatarErrorBoundary>
      <div>
        {resource && (
          <Suspense fallback={<Fallback />}>
            <Image alt="test image" imgData={resource.img} />
          </Suspense>
        )}
        {!resource && null}
      </div>
    </AvatarErrorBoundary>
  )
}
```

## API

| Name               | Argument Type                                | Default                        | Description                                                                  |
| ------------------ | -------------------------------------------- | ------------------------------ | ---------------------------------------------------------------------------- |
| `getAvatarProps`   | **options**: [AvatarOptions](#avataroptions) | kind: 'neutral'<br />size: 'm' | Get avatar container and image element props (CSS), and options for icon API |
| `getJSAvatarProps` | **options**: [AvatarOptions](#avataroptions) | same as CSS API                | CSS-in-JS API                                                                |

## Options

### AvatarOptions

This interface is available as an `import` for use.

```typescript
export interface AvatarOptions {
  label: string
  sentiment?: 'default' | 'strong'
  size?: 'xs' | 's' | 'm' | 'l' | 'xl'
  src: string
  tech?: 'svelte' | ''
}
```

```typescript title="Import example"
import type { AvatarOptions } from '@pluralsight/headless-styles/types'
```

## Props

### AvatarProps

```typescript
interface AvatarProps {
  iconOptions: {
    ariaHidden: true
    ariaLabel: string
    customSize: string
    tech: string
  }
  wrapper: {
    className: string
  }
  image: {
    alt: string
    className: string
    src: string
  }
  label: {
    'aria-label': string
    className: string
    value: string
  }
}
```

### JSAvatarProps

```typescript
interface JSAvatarProps {
  iconOptions: {
    ariaHidden: true
    ariaLabel: string
    customSize: string
    tech: string
  }
  wrapper: {
    cssProps: TemplateLiteralStringArray | string
    styles: Record<CSSProps, string>
  }
  image: {
    a11yProps: {
      alt: string
      src: string
    }
    cssProps: TemplateLiteralStringArray | string
    styles: Record<CSSProps, string>
  }
  label: {
    a11yProps: {
      'aria-label': string
      value: string
    }
    cssProps: TemplateLiteralStringArray | string
    styles: Record<CSSProps, string>
  }
}
```
